fixing index page on mobile

--- a/style.css
+++ b/style.css
@@ -122,7 +122,7 @@ img {
   background-position: center;
   color: white;
   text-align: center;
-  padding: 20px;
+  padding: 105px 20px 20px 20px;
   display: flex;
   flex-direction: column;
   justify-content: center;
